[gd_scene load_steps=5 format=3 uid="uid://33t1mtog36ju"]

[ext_resource type="Script" path="res://content/scenes/mars_system/mars_system.gd" id="1_ey0r5"]
[ext_resource type="PackedScene" uid="uid://cowk1sb5rws3a" path="res://content/scenes/mars_sim/mars_sim.tscn" id="2_gvkhl"]
[ext_resource type="PackedScene" uid="uid://31h07126r0qd" path="res://content/scenes/menu/menu_main.tscn" id="3_mkfr7"]
[ext_resource type="PackedScene" uid="uid://dkfi865sp5164" path="res://addons/mars-ui/content/ui/components/info_nodes/info_node_screen/info_node_screen.tscn" id="4_gpsm5"]

[node name="MarsSystem" type="Node3D"]
script = ExtResource("1_ey0r5")

[node name="MarsSim" parent="." instance=ExtResource("2_gvkhl")]
unique_name_in_owner = true
transform = Transform3D(0.999999, -0.00112215, 0.000132503, 0.00112217, 0.999999, -0.000101021, -0.000132388, 0.000101173, 1, 0, 1.39895, -2.51573)

[node name="MainMenu" parent="." instance=ExtResource("3_mkfr7")]
unique_name_in_owner = true
transform = Transform3D(0.636078, 0, 0.771625, 0, 1, 0, -0.771625, 0, 0.636078, -0.353, 1.25, -0.405)

[node name="InfoNodeScreen" parent="." instance=ExtResource("4_gpsm5")]
unique_name_in_owner = true
transform = Transform3D(0.681998, 0, -0.731354, 0, 1, 0, 0.731354, 0, 0.681998, 0.428, 1.25, -0.406)
